--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "test-recharts3",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
+    "name": "test-recharts",
+    "version": "1.0.0",
+    "description": "",
+    "keywords": [],
+    "main": "src/index.tsx",
+    "dependencies": {
+      "@emotion/react": "11.9.3",
+      "@emotion/styled": "11.9.3",
+      "@mui/material": "5.9.2",
+      "react": ">18.0.1",
+      "react-dom": ">18.0.1",
+      "react-scripts": ">4.0.0",
+      "recharts": ">2.1.13"
+    },
+    "devDependencies": {
+      "@types/react": ">17.0.0",
+      "@types/react-dom": ">17.0.0",
+      "typescript": ">4.1.3"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env=jsdom",
+      "eject": "react-scripts eject"
+    },
+    "browserslist": [
       ">0.2%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
   }
-}
